*compilation*
-*- mode: compilation; default-directory: "~/Documents/Labs/mcslab_2_ms1518/" -*-
Compilation started at Wed Nov 11 10:27:47

make -k 
g++ -Wall -g -c main.cpp
main.cpp: In function ‘int main(int, char**)’:
main.cpp:28:16: error: expected ‘;’ before ‘}’ token
   28 |     num_of_rt++
      |                ^
      |                ;
   29 |   }
      |   ~             
main.cpp:38:13: error: expected primary-expression before ‘const’
   38 |   pb(string const& path_pb)
      |             ^~~~~
make: *** [makefile:5: main.o] Error 1
g++ -Wall -g -c plugboard.cpp
plugboard.cpp:5:9: error: ‘string’ was not declared in this scope
    5 | int  pb(string const& path_pb) {
      |         ^~~~~~
plugboard.cpp:1:1: note: ‘std::string’ is defined in header ‘<string>’; did you forget to ‘#include <string>’?
  +++ |+#include <string>
    1 | /* Plugboard Implementation*/
make: *** [makefile:8: plugboard.o] Error 1
make: Target 'enigma' not remade because of errors.

Compilation exited abnormally with code 2 at Wed Nov 11 10:27:47
